--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <a class="nav-link" onclick="openSearch()"><i class="fas fa-search"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-dark btn-sm" href="" tabindex="-1" aria-disabled="true" role="button">로그인</a>
+                    <a class="nav-link btn btn-dark btn-sm" href="login.html" tabindex="-1" aria-disabled="true" role="button">로그인</a>
                 </li>
             </ul>
         </div>
