--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/5f03d8662e.js" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap Sctips -->
+    <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
